--- a/package.json
+++ b/package.json
@@ -3,26 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.18.5",
     "connected-react-router": "^6.9.2",
+    "craco-less": "^2.0.0",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-placeholder": "^4.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.0",
+    "react-window-size-listener": "^1.5.4",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
