--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "connected-react-router": "^6.9.2",
     "craco-less": "^2.0.0",
     "nprogress": "^0.2.0",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-placeholder": "^4.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.0",
+    "react-smooth-scrollbar": "^8.0.6",
+    "react-throttle": "^0.3.0",
     "react-window-size-listener": "^1.5.4",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
+    "smooth-scrollbar": "^8.7.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
