--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.18.5",
     "connected-react-router": "^6.9.2",
     "craco-less": "^2.0.0",
+    "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "qs": "^6.10.3",
     "react": "^17.0.2",
