--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "5.8.0",
+    "@craco/craco": "^5.5.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -18,7 +18,7 @@
     "react-placeholder": "^4.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^3.2.0",
     "react-smooth-scrollbar": "^8.0.6",
     "react-throttle": "^0.3.0",
     "react-window-size-listener": "^1.5.4",
